--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,10 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+.app__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
