create stats section

--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,21 @@
   margin: 0;
   box-sizing: border-box;
 }
+body {
+  background-color: #f5f6fa;
+}
+
 
 .app__header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 20px;
+}
+
+.app__stats {
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 10px;
 }
