add country info to map tooltip

--- a/src/styles/map.css
+++ b/src/styles/map.css
@@ -9,3 +9,32 @@
 .map .leaflet-container {
   height: 100%;
 }
+
+.info-container {
+  width: 150px;
+}
+
+.info-flag img {
+  width: 100px;
+  border-radius: 10px;
+}
+
+.info-flag {
+  height: 80px;
+  width: 100%;
+  background-size: cover;
+  border-radius: 10px;
+}
+
+.info-name {
+  font-size: 1.3rem;
+  font-weight: 700;
+  color: #555;
+}
+
+.info-confirmed,
+.info-recovered,
+.info-deaths {
+  font-size: 1rem;
+  margin-top: 10px;
+}
